plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'org.graalvm.buildtools.native' version '0.9.24'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.apache.ignite:ignite-core:2.15.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

graalvmNative {
        binaries {
                main {
                        buildArgs.add("--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback")
                        buildArgs.add("-J--add-opens=java.base/java.time=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/java.io=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/java.nio=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/java.util=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/java.util.concurrent=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED")
                        buildArgs.add("-J--add-opens=java.base/java.lang=ALL-UNNAMED")
                        mainClass = 'com.vmware.atlas.graalvm.GraalVmApplication'
                }
        }
}
